[gd_scene load_steps=5 format=3 uid="uid://cxvg72c0cc4ji"]

[ext_resource type="Texture2D" uid="uid://cgf16pxqe5lcw" path="res://textures/UI/leaf icon.png" id="1_3n7vm"]
[ext_resource type="Script" uid="uid://bjbjgyoa7ym8r" path="res://inventory.gd" id="1_ki15f"]
[ext_resource type="FontFile" uid="uid://x5uarbb3anha" path="res://fonts/FOT-Seurat Pro B.otf" id="2_jqulp"]
[ext_resource type="Texture2D" uid="uid://bi6lqh7l68o1m" path="res://textures/UI/X icon.png" id="3_nwt7c"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ki15f")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 15.0
offset_right = 128.0
offset_bottom = 167.0
grow_horizontal = 2
columns = 5

[node name="Table" type="Button" parent="GridContainer"]
texture_filter = 2
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
text = "Table"
icon = ExtResource("1_3n7vm")
icon_alignment = 1
expand_icon = true

[node name="Chair" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
text = "Chair"
icon = ExtResource("1_3n7vm")
icon_alignment = 1
expand_icon = true

[node name="Wedge" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 11
text = "Wedge"
icon = ExtResource("1_3n7vm")
icon_alignment = 1
expand_icon = true

[node name="Ring" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
text = "Ring"
icon = ExtResource("1_3n7vm")
icon_alignment = 1
expand_icon = true

[node name="Button5" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
icon_alignment = 1
expand_icon = true

[node name="Button6" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
icon_alignment = 1
expand_icon = true

[node name="Button7" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
icon_alignment = 1
expand_icon = true

[node name="Button8" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
icon_alignment = 1
expand_icon = true

[node name="Button9" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
icon_alignment = 1
expand_icon = true

[node name="Button10" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
icon_alignment = 1
expand_icon = true

[node name="Button11" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
icon_alignment = 1
expand_icon = true

[node name="Button12" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
icon_alignment = 1
expand_icon = true

[node name="Button13" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
icon_alignment = 1
expand_icon = true

[node name="Button14" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 12
icon_alignment = 1
expand_icon = true

[node name="Remove" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 0.6509804)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_jqulp")
theme_override_font_sizes/font_size = 9
text = "Remove"
icon = ExtResource("3_nwt7c")
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="GridContainer/Table" to="." method="_on_table_pressed"]
[connection signal="pressed" from="GridContainer/Chair" to="." method="_on_chair_pressed"]
[connection signal="pressed" from="GridContainer/Wedge" to="." method="_on_wedge_pressed"]
[connection signal="pressed" from="GridContainer/Ring" to="." method="_on_ring_pressed"]
[connection signal="pressed" from="GridContainer/Remove" to="." method="_on_remove_pressed"]
